# quizzy

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish-to-pypi.yaml
quizzy/: __main__.py  app.py  models.py  quizzy.tcss
systemd/: textual-web.service
