
[project]
name = "quizzy"
version = "0.1.0"
description = "A Python TUI quiz app"
authors = [{ name = "Jonas Ehrlich", email = "jonas.ehrlich@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.10.3", "pyyaml>=6.0.2", "textual>=1.0.0"]
license = "MIT"

[project.scripts]
quizzy = "quizzy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pytest>=8.3.4",
    "pytest-sugar>=1.0.0",
    "ruff>=0.8.3",
    "textual-dev>=1.7.0",
]
